--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,19 +1,24 @@
 global:
-  scrape_interval: 10s 
+  scrape_interval: 10s
   evaluation_interval: 10s
 
 scrape_configs:
-
-  - job_name: 'prometheus'
+  - job_name: prometheus
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    metrics_path: /metrics
+    scheme: http
     static_configs:
-    - targets: ['localhost:9090']
+      - targets:
+          - prometheus:9090
 
-  - job_name: 'node'
+  - job_name: node-exporter
     static_configs:
-    - targets: ['localhost:9100']
+      - targets:
+          - node-exporter:9100
 
-  - job_name: 'actuator'
-    metrics_path: '/actuator/prometheus'
+  - job_name: app
+    metrics_path: /actuator/prometheus
     static_configs:
-    - targets: ['localhost:8080']
-
+      - targets:
+          - app:8080
