--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   prometheus:
@@ -15,8 +15,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - grafana-data:/var/lib/grafana
     depends_on:
       - prometheus
 
@@ -40,8 +39,8 @@ services:
       SPRING_DATASOURCE_USERNAME: "roman"
       SPRING_DATASOURCE_PASSWORD: "admin"
     ports:
-     - 8080:8080
-          
+      - 8080:8080
+
   db:
     image: mysql
     volumes:
@@ -55,10 +54,13 @@ services:
     ports:
       - 3307:3306
     healthcheck:
-      test: ["CMD-SHELL", 'mysqladmin ping']
+      test: ["CMD-SHELL", "mysqladmin ping"]
       interval: 10s
       timeout: 2s
       retries: 10
-      
+
 volumes:
   data-volume:
+    external: true
+  grafana-data:
+    external: true
