--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/gym?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
+spring.datasource.url=jdbc:mysql://34.89.144.137:3306/gym?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
